--- a/source/makefile
+++ b/source/makefile
@@ -1,10 +1,13 @@
 make:
-	g++ -c *.cpp
+	g++ -g -c *.cpp
 	g++ *.o -lsfml-audio -lsfml-graphics -lsfml-window -lsfml-system -o Wanderlust
 	rm *.o
 
 run: make
 	./Wanderlust
+
+debug: make
+	gdb Wanderlust
 
 clean:
 	rm Wanderlust *.o *.gch
